--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,6 @@
     <!-- Footer -->
-    <div class="foot">
-      <footer class="page-footer font-small special-color-dark pt-4">
+    <div class="footwrap">
+      <footer class="page-footer font-small special-color-dark">
 
       <!-- Copyright -->
       <div class="footer-copyright text-center py-3">Made with <i class="fa fa-heart" style="color:red;"></i> in India
@@ -12,4 +12,6 @@
     </div>
 
   </body>
+
+  <script src="js/counter.js"></script>
 </html>
