--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,10 +1,58 @@
 <%- include("header") %>
 <div class="wrapper">
   <div class="hero">
-    <center><h1> Welcome to the COVID-19 HelpBoard! </h1> </center>
+    <!-- NAV SECTION START -->
+    <div class="nav">
+
+    </div>
+
+    <!-- NAV SECTION END -->
+
+    <div class="row">
+      <div class="col-6">
+        <div class="caption">
+          <div style="color:orange;">
+            #India
+          </div>Fights <br>
+          <div style="color:green;">
+            Corona
+          </div>
+        </div>
+
+        <div class="subtext"><h4> Welcome to the COVID-19 HelpBoard! </h4> </div>
+      </div>
+      <div class="col-6">
+        <div class="counter">
+          <div class="counter-border">
+            <div class="row">
+              <div class="col-4">
+                <div class="counter-caption">
+                  Number of Confirmed Cases
+                </div>
+                <div class="counter-number" id="cases">724</div>
+              </div>
+              <div class="col-4">
+                <div class="counter-caption">
+                  Number of Recoveries
+                </div>
+                <div class="counter-number" id="recov">66</div>
+              </div>
+              <div class="col-4">
+                <div class="counter-caption">
+                  Number of Deaths
+                </div>
+                <div class="counter-number" id="deaths">17</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
   </div>
+  <div class="landing_section">
+
+  </div>
+  <%- include("footer") %>
 </div>
-
-
-
-<%- include("footer") %>
