--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,7 +1,7 @@
 <%- include("header") %>
 <div class="wrapper">
   <div class="hero">
-    
+
     <!-- NAV SECTION START -->
     <div class="nav">
 
@@ -20,7 +20,10 @@
           </div>
         </div>
 
-        <div class="subtext"><h4> Welcome to the COVID-19 HelpBoard! </h4> </div>
+        <div class="subtext"> Welcome to the COVID-19 HelpBoard! </div>
+        <div class="get-started">
+          <button class="btn emer-but btn-success">Report an Emergency</button>
+        </div>
       </div>
       <div class="col-6">
         <div class="counter">
@@ -43,6 +46,16 @@
                   Number of Deaths
                 </div>
                 <div class="counter-number" id="deaths"><%= deaths %></div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-10">
+                <div class="source-text">
+                  Source: <a href="https://www.mohfw.gov.in/"> The Ministry of Health and Family Welfare </a>
+                </div>
+              </div>
+              <div class="col-2">
+
               </div>
             </div>
           </div>
