--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,12 +1,34 @@
 <%- include("header") %>
 
-<h1>Please Enter your Details below, we'll get back to you ASAP</h1>
+<div class="form-wrapper">
+  <div class="hero">
 
-<form action="/sos" method="POST">
-  <input type="text" name="address" placeholder="Enter your address">
-  <input type="text" name="contact" placeholder="Contact Number">
-  <input type="text" name="requirement" placeholder="Enter Requirement">
-  <button>Submit!</button>
-</form>
+    <div class="form-container">
+      <div class="v-align">
+        <div class="head-center">
+          Please Enter your Details below, we'll get back to you ASAP
+        </div>
 
-<%- include("footer") %>
+        <div class="row">
+          <div class="col-12">
+            <div class="form-box">
+              <form action="/sos" method="POST">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name" placeholder="Enter your full name">
+                <label for="address">Address</label>
+                <input type="text" name="address" class="form-control" id="address" placeholder="Enter your Address">
+                <label for="contactno">Contact Number</label>
+                <input type="text" name="contact" class="form-control" id="contactno" placeholder="10 Digit Phone Number">
+                <label for="requirement">Requirement</label>
+                <input type="text" name="requirement" class="form-control" id="requirement" placeholder="Ambulance, Medicines, Rations etc.">
+                <center><button class="btn btn-success form-submit">Submit!</button></center>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <%- include("footer") %>
+</div>
