--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,25 +4,51 @@
   <div class="hero">
 
     <div class="form-container">
-      <div class="v-align">
-        <div class="head-center">
-          Please Enter your Details below, we'll get back to you ASAP
+      <div class="row">
+        <div class="col-lg-6 col-sm-12 col-xs-12">
+          <div class="v-align">
+            <div class="head-center">
+              Please Enter your Details below, we'll get back to you ASAP
+            </div>
+            <div class="row">
+              <div class="col-12">
+                <div class="form-box">
+                  <form action="/sos" method="POST">
+                    <label for="pin">Pincode</label>
+                    <input type="text" name="pin" class="form-control form-control-lg" id="pin" placeholder="Enter your Address Pincode">
+                    <label for="name">Name</label>
+                    <input type="text" name="name" class="form-control form-control-lg" id="name" placeholder="Enter your full name">
+                    <label for="address">Address</label>
+                    <input type="text" name="address" class="form-control form-control-lg" id="address" placeholder="Enter your Address">
+                    <label for="contactno">Contact Number</label>
+                    <input type="text" name="contact" class="form-control form-control-lg" id="contactno" placeholder="10 Digit Phone Number">
+                    <label for="requirement">Requirement</label> <br>
+                    <div class="form-control-lg form-check form-check-inline">
+                      <input class="form-check-input" type="checkbox" id="meds" value="meds">
+                      <label class="form-check-label" for="meds">Medicine</label>
+                    </div>
+                    <div class="form-control-lg form-check form-check-inline">
+                      <input class="form-check-input" type="checkbox" id="rations" value="rations">
+                      <label class="form-check-label" for="rations">Rations</label>
+                    </div>
+                    <div class="form-control-lg form-check form-check-inline">
+                      <input class="form-check-input" type="checkbox" id="ambulance" value="ambulance">
+                      <label class="form-check-label" for="ambulance">Ambulance</label>
+                    </div>
+                    <input type="text" name="requirement" class="form-control form-control-lg" id="requirement" placeholder="Any other requirements">
+                    <center><button class="btn btn-success form-submit">Submit!</button></center>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-
-        <div class="row">
-          <div class="col-12">
-            <div class="form-box">
-              <form action="/sos" method="POST">
-                <label for="name">Name</label>
-                <input type="text" class="form-control" id="name" placeholder="Enter your full name">
-                <label for="address">Address</label>
-                <input type="text" name="address" class="form-control" id="address" placeholder="Enter your Address">
-                <label for="contactno">Contact Number</label>
-                <input type="text" name="contact" class="form-control" id="contactno" placeholder="10 Digit Phone Number">
-                <label for="requirement">Requirement</label>
-                <input type="text" name="requirement" class="form-control" id="requirement" placeholder="Ambulance, Medicines, Rations etc.">
-                <center><button class="btn btn-success form-submit">Submit!</button></center>
-              </form>
+        <div class="col-lg-6 col-sm-12 col-xs-12">
+          <div class="v-align">
+            <div class="head-center">
+              <div class="map-container">
+                  STAY INSIDE, STAY SAFE. HELP IS ON THE WAY!
+              </div>
             </div>
           </div>
         </div>
