--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>COVID-19 Helpboard</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="css/app.css">
+    <link type="text/css" rel="stylesheet" href="/css/app.css">
     <script src="https://kit.fontawesome.com/8a321c0242.js" crossorigin="anonymous"></script>
 
   </head>
