--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap')
 
 body{
 }
@@ -24,13 +25,53 @@ body{
   margin-top: 1.5rem;
 }
 
+.login{
+  font-size: 1vw;
+  margin-top: 0.5rem;
+  margin-right: 1rem;
+  float: right;
+  border-style: solid;
+  border-color: white;
+  padding: 0rem 1rem;
+  border-width: 2px;
+  border-radius: 5px;
+}
+
+.login:hover{
+  background: green;
+  cursor: pointer;
+}
+
 .subtext{
   font-size: 2vw;
   margin-left: 2rem;
 }
 
+.supporting-links{
+  font-size: 1vw;
+  text-align: center;
+}
+
+.data-summary{
+  margin-top: 60%;
+}
+
+.link-box{
+  max-width: 38vh;
+  border-style: solid;
+  padding: 0.5rem;
+  border-width: 1px;
+  border-radius: 7px;
+  margin-top: 1rem;
+}
+
+.link-box:hover{
+  background: rgba(0, 27, 97, 0.6);
+  cursor: pointer;
+}
+
 .counter{
-  padding-top: 70%;
+  padding-top: 0.5rem;
 }
 
 /* .counter-border{
@@ -72,10 +113,6 @@ body{
 
 .emer-but:hover{
   background-color: #006c00 !important;
-}
-
-.landing_section{
-  height: 1vh;
 }
 
 .form-wrapper{
@@ -149,6 +186,42 @@ body{
     margin-top: 10px;
     margin-bottom: 10px;
   }
+}
+
+.login-wrapper{
+  height: 100vh;
+  background: #2980B9;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #FFFFFF, #6DD5FA, #2980B9);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #FFFFFF, #6DD5FA, #2980B9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.login-box{
+  border-style: solid;
+  border-width: 3px;
+  border-radius: 10px;
+  padding: 1.5rem;
+  margin-top: 25%;
+  color: black;
+}
+
+.login-box-caption{
+  font-size: 2vw;
+}
+
+.login-details{
+  margin-top: 0.5rem;
+  font-family: 'Raleway', sans-serif;
+  background: rgba(0, 27, 27, 0.1);
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  color: white !important;
+  padding: 2rem;
+  padding-top: 3.5rem;
+}
+
+.login-but:hover{
+  background-color: rgba(0, 20, 47, 0.4);
 }
 
 .footwrap{
