--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -22,7 +22,7 @@
 
         <div class="subtext"> Welcome to the COVID-19 HelpBoard! </div>
         <div class="get-started">
-          <button class="btn emer-but btn-success">Report an Emergency</button>
+          <button class="btn emer-but btn-success" onclick="window.location.href = '/sos/new';">Report an Emergency</button>
         </div>
       </div>
       <div class="col-6">
