--- a/views/new.ejs
+++ b/views/new.ejs
@@ -15,7 +15,7 @@
                 <div class="form-box">
                   <form action="/sos" method="POST">
                     <label for="pin">Pincode</label>
-                    <input type="text" name="pin" class="form-control form-control-lg" id="pin" placeholder="Enter your Address Pincode">
+                    <input type="text" name="pincode" class="form-control form-control-lg" id="pin" placeholder="Enter your Address Pincode">
                     <label for="name">Name</label>
                     <input type="text" name="name" class="form-control form-control-lg" id="name" placeholder="Enter your full name">
                     <label for="address">Address</label>
@@ -24,18 +24,18 @@
                     <input type="text" name="contact" class="form-control form-control-lg" id="contactno" placeholder="10 Digit Phone Number">
                     <label for="requirement">Requirement</label> <br>
                     <div class="form-control-lg form-check form-check-inline">
-                      <input class="form-check-input" type="checkbox" id="meds" value="meds">
+                      <input class="form-check-input" type="checkbox" name="medicine" value="True">
                       <label class="form-check-label" for="meds">Medicine</label>
                     </div>
                     <div class="form-control-lg form-check form-check-inline">
-                      <input class="form-check-input" type="checkbox" id="rations" value="rations">
+                      <input class="form-check-input" type="checkbox" name="ration" value="True">
                       <label class="form-check-label" for="rations">Rations</label>
                     </div>
                     <div class="form-control-lg form-check form-check-inline">
-                      <input class="form-check-input" type="checkbox" id="ambulance" value="ambulance">
+                      <input class="form-check-input" type="checkbox" name="ambulance" value="True">
                       <label class="form-check-label" for="ambulance">Ambulance</label>
                     </div>
-                    <input type="text" name="requirement" class="form-control form-control-lg" id="requirement" placeholder="Any other requirements">
+                    <input type="text" name="requirement" class="form-control form-control-lg" name="requirement" placeholder="Any other requirements">
                     <center><button class="btn btn-success form-submit">Submit!</button></center>
                   </form>
                 </div>
