Add Emergency API

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -13,5 +13,6 @@
 
   </body>
 
-  <script src="js/counter.js"></script>
+  <script src="/js/counter.js"></script>
+  <script src="/js/emergency.js"></script>
 </html>
