--- a/views/new.ejs
+++ b/views/new.ejs
@@ -15,7 +15,7 @@
                 <div class="form-box">
                   <form action="/sos" method="POST">
                     <label for="pin">Pincode</label>
-                    <input type="text" name="pincode" class="form-control form-control-lg" id="pin" placeholder="Enter your Address Pincode">
+                    <input type="text" name="pincode" class="form-control form-control-lg" id="pin" onkeypress="retrieveState()" onkeyup="retrieveState()" placeholder="Enter your Address Pincode">
                     <label for="name">Name</label>
                     <input type="text" name="name" class="form-control form-control-lg" id="name" placeholder="Enter your full name">
                     <label for="address">Address</label>
@@ -46,8 +46,9 @@
         <div class="col-lg-6 col-sm-12 col-xs-12">
           <div class="v-align">
             <div class="head-center">
-              <div class="map-container">
-                  STAY INSIDE, STAY SAFE. HELP IS ON THE WAY!
+              <div class="map-container"> STAY INSIDE, STAY SAFE. HELP IS ON THE WAY!
+                <div id="displayState">YOU ARE IN </div>
+                <div id="displayNum">YOUR EMERGENCY CONTACT: </div>
               </div>
             </div>
           </div>
