--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,16 +1,11 @@
     <!-- Footer -->
-    <div class="footwrap">
-      <footer class="page-footer font-small special-color-dark">
-
-      <!-- Copyright -->
-      <div class="footer-copyright text-center py-3">Made with <i class="fa fa-heart" style="color:red;"></i> in India
-      </div>
-      <!-- Copyright -->
-
-      </footer>
-      <!-- Footer -->
-    </div>
-
+    <footer class="page-footer font-small blue pt-4">
+       <!-- Copyright -->
+       <div class="footer-copyright text-center py-3">Made with <i class="fa fa-heart" style="color:red;"></i> in India
+       </div>
+       <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
   </body>
 
   <script src="/js/counter.js"></script>
