--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -28,23 +28,30 @@
 
         <div class="subtext"> Welcome to the COVID-19 HelpBoard! </div>
         <div class="get-started">
-          <button class="btn emer-but btn-success" onclick="window.location.href = '/sos/new';">Report an Emergency</button>
+          <button class="btn emer-but btn-danger" onclick="window.location.href = '/sos/new';">Report an Emergency</button>
         </div>
       </div>
       <div class="col-6">
         <div class="data-summary">
           <div class="row">
-            <div class="col-6">
+            <div class="col-4">
              <div class="supporting-links">
                <div class="link-box">
                  Feels like I have the symptoms
                </div>
              </div>
             </div>
-            <div class="col-6">
+            <div class="col-4">
              <div class="supporting-links">
                <div class="link-box">
                  I have an idea and want to help!
+               </div>
+             </div>
+            </div>
+            <div class="col-4">
+             <div class="supporting-links">
+               <div class="link-box">
+                 How vulnerable am I?
                </div>
              </div>
             </div>
