Fix Responsiveness of Landing

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -16,7 +16,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-6">
+      <div class="col-sm-12 col-lg-6">
         <div class="caption">
           <div style="color:orange;">
             #India
@@ -27,11 +27,12 @@
         </div>
 
         <div class="subtext"> Welcome to the COVID-19 HelpBoard! </div>
+        <div class="alt-caption"> <span style="color:orange;">#India</span> fights <span style="color:green;">Corona</span> </div>
         <div class="get-started">
           <button class="btn emer-but btn-danger" onclick="window.location.href = '/sos/new';">Report an Emergency</button>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-sm-12 col-lg-6">
         <div class="data-summary">
           <div class="row">
             <div class="col-4">
@@ -80,13 +81,10 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-10">
+              <div class="col-12">
                 <div class="source-text">
                   Source: <a href="https://www.mohfw.gov.in/"> The Ministry of Health and Family Welfare, Govt. of India </a>
                 </div>
-              </div>
-              <div class="col-2">
-
               </div>
             </div>
           </div>
