--- a/views/sos.ejs
+++ b/views/sos.ejs
@@ -1,6 +1,13 @@
 <%- include("header") %>
 <div class="aid-wrapper">
   <div class="hero">
+    <div class="row">
+      <div class="col-12">
+        <div class="logout" onclick="window.location.href='/logout'">
+          Logout
+        </div>
+      </div>
+    </div>
     <div class="t-box">
       <div class="t-caption">
         People Requiring Aid
