--- a/public/css/app.css
+++ b/public/css/app.css
@@ -43,9 +43,32 @@ body{
   cursor: pointer;
 }
 
+.logout{
+  font-size: 1vw;
+  margin-top: 0.5rem;
+  margin-right: 1rem;
+  float: right;
+  border-style: solid;
+  border-color: white;
+  padding: 0rem 1rem;
+  border-width: 2px;
+  border-radius: 5px;
+  color: black;
+  background: rgba(255, 145, 196);
+}
+
+.logout:hover{
+  background: rgba(155, 145, 196);
+  cursor: pointer;
+}
+
 .subtext{
   font-size: 2vw;
   margin-left: 2rem;
+}
+
+.alt-caption{
+  display: none;
 }
 
 .supporting-links{
@@ -131,8 +154,18 @@ body{
 }
 
 .v-align{
+  font-size: 2vw;
   padding: 1rem;
   background: rgba(27, 27, 27, 0.6);
+  margin-left: 5%;
+  margin-right: 5%;
+  border-radius: 25px;
+  min-height: 90vh;
+  margin-bottom: 1rem;
+}
+
+.v-align-no-box{
+  padding: 1rem;
   margin-left: 5%;
   margin-right: 5%;
   border-radius: 25px;
@@ -174,7 +207,7 @@ body{
 }
 
 .map-container{
-  margin-top: 50%;
+  margin-top: 35%;
   margin-bottom: auto;
 }
 
@@ -230,9 +263,41 @@ table thead th{
     margin: 2px;
     min-height: 50px;
   }
+  .v-align-no-box{
+    margin: 2px;
+    min-height: 50px;
+    background: rgba(27, 27, 27, 0.6);
+  }
   .map-container{
     margin-top: 10px;
     margin-bottom: 10px;
+  }
+  .data-summary{
+    margin-top: 1%;
+    margin-left: 20%;
+    margin-right: 20%;
+  }
+  .counter{
+    margin-left: 20%;
+    margin-right: 20%;
+    text-align: center;
+  }
+  .caption{
+    display: none;
+  }
+  .subtext{
+    justify-content: center;
+    text-align: center;
+    margin-left: 0;
+  }
+  .get-started{
+    text-align: center;
+  }
+  .alt-caption{
+    text-align: center;
+    justify-content: center;
+    font-size: 3vw;
+    display: block;
   }
 }
 
