--- a/views/help-on-way.ejs
+++ b/views/help-on-way.ejs
@@ -1,3 +1,15 @@
-<h1>Thanks Help is on the way</h1>
-
-State: <%= loc %>
+<html>
+  <head>
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="css/success.css">
+  </head>
+    <body>
+      <div class="card">
+      <div style="border-radius:200px; height:200px; width:200px; background: #F8FAF5; margin:0 auto;">
+        <i class="checkmark">✓</i>
+      </div>
+        <h1>Success</h1>
+        <p>We received your request and have sent the data to the responsible authorities. <br/> People will be in touch with you shortly! Stay Safe.</p>
+      </div>
+    </body>
+</html>
