Add Responsiveness Features

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -35,21 +35,21 @@
       <div class="col-sm-12 col-lg-6">
         <div class="data-summary">
           <div class="row">
-            <div class="col-4">
+            <div class="col-sm-12 col-lg-4">
              <div class="supporting-links">
                <div class="link-box">
                  Feels like I have the symptoms
                </div>
              </div>
             </div>
-            <div class="col-4">
+            <div class="col-sm-12 col-lg-4">
              <div class="supporting-links">
                <div class="link-box">
                  I have an idea and want to help!
                </div>
              </div>
             </div>
-            <div class="col-4">
+            <div class="col-sm-12 col-lg-4">
              <div class="supporting-links">
                <div class="link-box">
                  How vulnerable am I?
@@ -61,19 +61,19 @@
         <div class="counter">
           <div class="counter-border">
             <div class="row">
-              <div class="col-4">
+              <div class="col-sm-12 col-lg-4">
                 <div class="counter-caption">
                   Number of Confirmed Cases
                 </div>
                 <div class="counter-number" id="cases"><%= total %></div>
               </div>
-              <div class="col-4">
+              <div class="col-sm-12 col-lg-4">
                 <div class="counter-caption">
                   Number of Recoveries
                 </div>
                 <div class="counter-number" id="recov"><%= discharged %></div>
               </div>
-              <div class="col-4">
+              <div class="col-sm-12 col-lg-4">
                 <div class="counter-caption">
                   Number of Deaths
                 </div>
