--- a/public/css/app.css
+++ b/public/css/app.css
@@ -273,14 +273,12 @@ table thead th{
     margin-bottom: 10px;
   }
   .data-summary{
+    text-align: center;
     margin-top: 1%;
-    margin-left: 20%;
-    margin-right: 20%;
   }
   .counter{
-    margin-left: 20%;
-    margin-right: 20%;
     text-align: center;
+    margin-top: 1%;
   }
   .caption{
     display: none;
@@ -293,11 +291,22 @@ table thead th{
   .get-started{
     text-align: center;
   }
+  .supporting-links{
+    text-align: center;
+  }
   .alt-caption{
     text-align: center;
     justify-content: center;
     font-size: 3vw;
     display: block;
+  }
+  .link-box{
+    max-width: 100vw;
+    margin-left: 3rem;
+    margin-right: 3rem;
+  }
+  .emer-but{
+    margin-left: 0;
   }
 }
 
