Fixed Footer Responsiveness

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,6 +7,7 @@ body{
 }
 
 .wrapper{
+  min-height: 100vh;
   background-image: url(../img/landing2.jpg);
   background-position: center center;
   background-repeat: no-repeat;
@@ -141,8 +142,8 @@ body{
 }
 
 .form-wrapper{
-  /* height: 100vh;
-  background: #000046;  /* fallback for old browsers
+  min-height: 100vh;
+  /*background: #000046;  /* fallback for old browsers
   background: -webkit-linear-gradient(to top, #1CB5E0, #000046);  /* Chrome 10-25, Safari 5.1-6
   background: linear-gradient(to top, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+
   height: 100vh; */
@@ -289,6 +290,7 @@ table thead th{
     margin-left: 0;
   }
   .get-started{
+    margin-left: 0;
     text-align: center;
   }
   .supporting-links{
@@ -305,12 +307,10 @@ table thead th{
     margin-left: 3rem;
     margin-right: 3rem;
   }
-  .emer-but{
-    margin-left: 0;
-  }
 }
 
 .login-wrapper{
+  min-height: 100vh;
   background: #2980B9;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to top, #FFFFFF, #6DD5FA, #2980B9);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to top, #FFFFFF, #6DD5FA, #2980B9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
