--- a/public/css/app.css
+++ b/public/css/app.css
@@ -231,14 +231,15 @@ table{
   color: black !important;
   padding-top: 2rem;
   border-radius: 5px;
-  font-size: 1rem;
+  font-size: 1vw;
   font-weight: normal;
   border: none;
   border-collapse: collapse;
   width: 100%;
-  max-width: 100%;
+  max-width: 100vw;
   white-space: nowrap;
   background-color: white;
+  margin: 1vw;
 }
 
 table td, table th{
