--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,6 +13,7 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #464646;
+  margin-bottom: 1rem;
 }
 
 .hero{
@@ -280,15 +281,17 @@ table thead th{
   }
   .counter{
     text-align: center;
-    margin-top: 1%;
+    margin-top: 5%;
   }
   .caption{
     display: none;
   }
   .subtext{
+    font-size: 4vw;
     justify-content: center;
     text-align: center;
     margin-left: 0;
+    margin-top: 2rem;
   }
   .get-started{
     margin-left: 0;
@@ -300,13 +303,22 @@ table thead th{
   .alt-caption{
     text-align: center;
     justify-content: center;
-    font-size: 3vw;
+    font-size: 6vw;
     display: block;
+  }
+  .login{
+    float: none;
+    max-width: 10vw;
+    margin-left: 47vw;
+    text-align: center;
   }
   .link-box{
     max-width: 100vw;
-    margin-left: 3rem;
-    margin-right: 3rem;
+    margin-left: 5rem;
+    margin-right: 5rem;
+  }
+  .wrapper{
+    min-height: 100vh;
   }
 }
 
@@ -335,7 +347,7 @@ table thead th{
 }
 
 .login-box-caption{
-  font-size: 2vw;
+  font-size: 4vh;
 }
 
 .login-details{
