--- a/public/css/app.css
+++ b/public/css/app.css
@@ -281,7 +281,8 @@ table thead th{
   }
   .counter{
     text-align: center;
-    margin-top: 5%;
+    margin-top: 15%;
+    margin-bottom: 5%;
   }
   .caption{
     display: none;
@@ -297,14 +298,19 @@ table thead th{
     margin-left: 0;
     text-align: center;
   }
+  .emer-but{
+    font-size: 5vw;
+  }
   .supporting-links{
     text-align: center;
+    font-size: 3vw;
   }
   .alt-caption{
     text-align: center;
     justify-content: center;
-    font-size: 6vw;
+    font-size: 20vw;
     display: block;
+    margin-bottom: -1.7rem;
   }
   .login{
     float: none;
@@ -319,6 +325,9 @@ table thead th{
   }
   .wrapper{
     min-height: 100vh;
+  }
+  .form-wrapper{
+    background-image: url(../img/form-mobile.jpg);
   }
 }
 
@@ -365,6 +374,61 @@ table thead th{
 .login-but:hover{
   background-color: rgba(0, 20, 47, 0.4);
 }
+
+.corona-wrapper{
+  min-height: 100vh;
+  background-color: black;
+}
+
+.help-card{
+  border-style: solid;
+  border-radius: 25px;
+  border-width: 3px;
+  border-color: #ffd700;
+  min-height: 80vh;
+  margin-top: 7rem;
+  margin-left: 3rem;
+  margin-right: 2rem;
+  margin-bottom: 1rem;
+}
+
+.help-caption{
+  text-align: center;
+  font-size: 5vh;
+  padding-top: 2rem;
+}
+
+.help-details{
+  font-family: 'Raleway', sans-serif;
+  background: rgba(0, 27, 27, 0.1);
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  color: white !important;
+  padding-top: 1.5rem !important;
+  padding: 2rem;
+}
+
+.help-button{
+  border-style: solid;
+  border-width: 3px;
+  text-align: center;
+  padding: 1rem;
+  margin-left: 5rem;
+  margin-right: 5rem;
+  border-radius: 10px;
+  border-color: grey;
+  margin-bottom: 1rem;
+}
+
+.help-button:hover{
+  background: rgba(57, 97, 127, 0.8);
+  color: white;
+  border-color: white;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
 
 footer{
   color: white;
