--- a/views/corona.ejs
+++ b/views/corona.ejs
@@ -1,8 +1,9 @@
 <%- include("header") %>
+<body>
 <div class="corona-wrapper">
   <div class="hero">
     <div class="corona-caption">
-      <span style="color: orange;"> जन है </span>तो<span style="color: green;"> जहां है</span>
+      <span style="color: orange;"> जान है </span>तो<span style="color: green;"> जहान है</span>
     </div>
     <div class="row">
       <div class="col-sm-12 col-md-12 col-lg-4">
