--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -10,4 +10,5 @@
 
   <script src="/js/counter.js"></script>
   <script src="/js/emergency.js"></script>
+  <script src="/js/misc.js"></script>
 </html>
