--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,4 +1,5 @@
 <%- include("header") %>
+<body>
 <div class="wrapper">
   <div class="hero">
 
@@ -44,7 +45,7 @@
             </div>
             <div class="col-sm-12 col-lg-4">
              <div class="supporting-links">
-               <div class="link-box">
+               <div class="link-box" onclick="window.location.href = '/idea';">
                  I have an idea and want to help!
                </div>
              </div>
