--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,9 +13,9 @@
             <div class="col-lg-4 col-sm-12">
               <form action="/login" method="POST">
                 <label for="username">Username</label>
-                <input type="text" name="username" class="form-control form-control-lg" id="username" placeholder="Enter username"> <br>
+                <input type="text" name="username" class="form-control form-control-lg" id="username" placeholder="Enter username" required> <br>
                 <label for="password">Password</label>
-                <input type="password" name="password" class="form-control form-control-lg" id="username" placeholder="Enter password"> <br>
+                <input type="password" name="password" class="form-control form-control-lg" id="username" placeholder="Enter password" required> <br>
                 <button class="btn login-but form-submit">Login</button>
               </form>
             </div>
