--- a/views/suggestion.ejs
+++ b/views/suggestion.ejs
@@ -10,11 +10,11 @@
         <div class="idea-form">
           <form action="/idea" method="POST">
             <label for="username">Name</label>
-            <input type="text" name="author" class="form-control form-control-lg" placeholder="Enter your Name"> <br>
+            <input type="text" name="author" class="form-control form-control-lg" placeholder="Enter your Name" required> <br>
             <label for="username">Title</label>
-            <input type="text" name="title" class="form-control form-control-lg" placeholder="Give your idea a title"> <br>
+            <input type="text" name="title" class="form-control form-control-lg" placeholder="Give your idea a title" required> <br>
             <label for="username">Suggestion/Idea</label>
-            <textarea name="content" class="form-control form-control-lg" rows="8" placeholder="Explain your idea in detail"></textarea> <br>
+            <textarea name="content" class="form-control form-control-lg" rows="8" placeholder="Explain your idea in detail" required></textarea> <br>
             <button> Submit </button>
           </form>
         </div>
