--- a/views/new.ejs
+++ b/views/new.ejs
@@ -15,13 +15,13 @@
                 <div class="form-box">
                   <form action="/sos" method="POST">
                     <label for="pin">Pincode</label>
-                    <input type="text" name="pincode" class="form-control form-control-lg" id="pin" onkeypress="retrieveState()" onkeyup="retrieveState()" placeholder="Enter your Address Pincode">
+                    <input type="text" name="pincode" class="form-control form-control-lg" id="pin" onkeypress="retrieveState()" onkeyup="retrieveState()" placeholder="Enter your Address Pincode" required>
                     <label for="name">Name</label>
-                    <input type="text" name="name" class="form-control form-control-lg" id="name" placeholder="Enter your full name">
+                    <input type="text" name="name" class="form-control form-control-lg" id="name" placeholder="Enter your full name" required>
                     <label for="address">Address</label>
-                    <input type="text" name="address" class="form-control form-control-lg" id="address" placeholder="Enter your Address">
+                    <input type="text" name="address" class="form-control form-control-lg" id="address" placeholder="Enter your Address" required>
                     <label for="contactno">Contact Number</label>
-                    <input type="text" name="contact" class="form-control form-control-lg" id="contactno" placeholder="10 Digit Phone Number">
+                    <input type="text" name="contact" class="form-control form-control-lg" id="contactno" placeholder="10 Digit Phone Number" required>
                     <label for="requirement">Requirement</label> <br>
                     <div class="form-control-lg form-check form-check-inline">
                       <input class="form-check-input" type="checkbox" name="medicine" value="True">
