--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -52,7 +52,7 @@
             </div>
             <div class="col-sm-12 col-lg-4">
              <div class="supporting-links">
-               <div class="link-box">
+               <div class="link-box" onclick="window.location.href = '/vulnerability';">
                  How vulnerable am I?
                </div>
              </div>
