Update Ideas UI

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -10,5 +10,6 @@
 
   <script src="/js/counter.js"></script>
   <script src="/js/emergency.js"></script>
+  <script src="/js/vulnerable.js"></script>
   <script src="/js/misc.js"></script>
 </html>
