--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -11,9 +11,7 @@
     <!-- NAV SECTION END -->
     <div class="row">
       <div class="col-12">
-        <div class="login" onclick="window.location.href='login'">
-          Login
-        </div>
+        <div class="login" onclick="window.location.href='login'">Login</div>
       </div>
     </div>
     <div class="row">
