--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Mukta&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&display=swap');
 
 body{
   background-color: black;
@@ -30,7 +31,7 @@ body{
 }
 
 .login{
-  font-size: 1vw;
+  font-size: 2vh;
   margin-top: 0.5rem;
   margin-right: 1rem;
   float: right;
@@ -120,7 +121,7 @@ body{
 }
 
 .source-text{
-  font-size: 1vw !important;
+  font-size: 2.3vh   !important;
   text-align: center;
 }
 
@@ -285,8 +286,29 @@ table thead th{
   }
   .counter{
     text-align: center;
-    margin-top: 15%;
-    margin-bottom: 5%;
+    margin-top: 4%;
+    margin-bottom: 25%;
+    margin-left: 8%;
+  }
+  .counter-caption{
+    font-size: 2vh;
+    position: absolute;
+    bottom: 0rem;
+    top: 4rem;
+    left: 0;
+    right: 0;
+  }
+  .counter-number{
+    position: absolute;
+    top: 0;
+    font-size: 5.5vh;
+    left: 0;
+    right: 0;
+  }
+  .source-text{
+    font-size: 1.7vh !important;
+    position: relative;
+    top: 7.5rem;
   }
   .caption{
     display: none;
@@ -296,7 +318,7 @@ table thead th{
     justify-content: center;
     text-align: center;
     margin-left: 0;
-    margin-top: 2rem;
+    margin-top: 3rem;
   }
   .get-started{
     margin-left: 0;
@@ -317,10 +339,12 @@ table thead th{
     margin-bottom: -1.7rem;
   }
   .login{
-    float: none;
-    max-width: 10vw;
-    margin-left: 47vw;
+    position: absolute;
+    left: 0;
+    right: 0;
     text-align: center;
+    margin-left: 35%;
+    margin-right: 35%;
   }
   .link-box{
     max-width: 100vw;
@@ -457,63 +481,68 @@ table thead th{
 
 .idea-wrapper{
   min-height: 100vh;
-  background-color: black;
+  background-color: #f2f8f9;
   overflow: hidden;
 }
 
 .icaption{
+  /*background-color: #ef5455; */
+  font-family: 'Arvo', serif;
   padding-top: 2rem;
-  font-size: 7vw;
+  font-size: 5vw;
   text-align: center;
+  position: relative;
+  z-index: 3;
 }
 
 .idea-card{
-  background: rgba(27, 27, 27, 0.3);
-  /* background-color: #ebebeb; */
+  background-color: white;
   color: black;
   padding: 1rem;
   margin: 2.5rem;
   border-style: solid;
   border-width: 2px;
   border-color: white;
-  border-radius: 15px;
+  box-shadow: 0px 14px 50px rgba(34, 35, 58, 0.2);
+  border-radius: 25px;
 }
 
 .idea-card:hover{
   transform: translateY(-5px) scale(1.005) translateZ(0);
-  box-shadow: 0 7px 30px #fff;
+  box-shadow: 0 7px 30px #000;
 }
 
 .idea-title{
-  font-size: 2vw;
-  color: blue;
+  font-size: 3.5vh;
+  color: #2b32c2;
 }
 
 .idea-content{
   font-family: 'Raleway', sans-serif;
-  color: white;
+  color: black;
 }
 
 .idea-author{
-  color: blue;
+  font-size: 2vh;
+  color: #5b32a2;
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
 
 .idea-time{
   text-align: right;
-  color: white;
+  color: black;
 }
 
 .idea-form{
   padding: 5rem;
   padding-top: 1rem;
+  color: black;
 }
 
 .idea-form input{
   font-family: 'Raleway', sans-serif;
   background: transparent;
-  color: white;
 }
 
 .idea-form textarea{
@@ -524,10 +553,12 @@ table thead th{
 .scroll-card{
   position: absolute;
   overflow-y: scroll;
-  height: 100%;
-  top: 15rem;
-  bottom: -15rem;
+  height: 47rem;
+  top: 13.5rem;
+  bottom: 0;
   right: 0;
+  z-index: 2;
+  border-radius: 25px;
 }
 
 .scroll-card::-webkit-scrollbar{
@@ -539,7 +570,7 @@ table thead th{
 }
 
 .cOverflow{
-  overflow: hidden;
+  overflow: auto;
 }
 
 #resizeThis{
@@ -570,8 +601,10 @@ table thead th{
 
 .vul-data{
   font-size: 4vh;
+  padding-top: 20rem;
 }
 
 footer{
+  font-size: 1.5vh;
   color: white;
 }
